--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,16 +10,16 @@
                     <div class="bottom-item">
                         <div class="cs-item">
                             <span>{{offer_karigar}}</span>
-                            <p>Carpenter</p>
+                            <p>Carpenter/Masons/Fabricator</p>
                         </div>
-                        <div class="cs-item">
+                        <!-- <div class="cs-item">
                             <span>{{offer_Masons}}</span>
                             <p>Masons</p>
                         </div>
                         <div class="cs-item">
                             <span>{{offer_Fabricator}}</span>
                             <p>Fabricator</p>
-                        </div>
+                        </div> -->
                         <div class="cs-item">
                             <span>{{offer_Architect}}</span>
                             <p>Dealer</p>
