--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,7 @@
             <li><a routerLink="/karigar-list/Carpenter" routerLinkActive="active" (click)="refershCount()" *ngIf="this.db.datauser.id==1 || this.db.datauser.carpenter==1">Carpenter</a></li>
             <li><a routerLink="/karigar-list/Masons" routerLinkActive="active" (click)="refershCount()" *ngIf="this.db.datauser.id==1 || this.db.datauser.masons==1">Masons</a></li>
             <li><a routerLink="/karigar-list/Fabricator" routerLinkActive="active" (click)="refershCount()" *ngIf="this.db.datauser.id==1 || this.db.datauser.fabricator==1">Fabricator</a></li>
-            <li><a routerLink="/dealer-list/1" routerLinkActive="active" (click)="refershCount()" *ngIf="this.db.datauser.id==1 || this.db.datauser.architect==1">Dealer</a></li>
+            <li><a routerLink="/dealer-list/1" routerLinkActive="active" (click)="refershCount()" *ngIf="this.db.datauser.id==1 || this.db.datauser.dealer==1">Dealer</a></li>
             <li><a routerLink="/contractor-list" routerLinkActive="active" (click)="refershCount()">Dealer Code </a></li>
             <!-- <li><a routerLink="/distributor-list/1" routerLinkActive="active" *ngIf="this.db.datauser.id==1 || this.db.datauser.sales_executive==1">Sales Executive</a></li> -->
             <li><a routerLink="/coupon-code-list" routerLinkActive="active" (click)="refershCount()" *ngIf="this.db.datauser.id==1 || this.db.datauser.coupon_code==1">Coupon Codes</a></li>
