product wise videos

--- a/src/app/master/video/video.component.html
+++ b/src/app/master/video/video.component.html
@@ -106,8 +106,8 @@
                             <mat-form-field class="cs-input">
                                 <mat-select placeholder="Product Name" name="product_id"  [(ngModel)]="vedioForm.product_id" #product_id="ngModel" 
                                 required>
-                                    <mat-option *ngFor="let val of product_code" [value]="val.product_id" (click)="getprod(val)">
-                                        {{val.product_point_group}}
+                                    <mat-option *ngFor="let val of product_code" value="{{val.product_point_id}}" (click)="getprod(val)">
+                                        {{val.product}}
                                     </mat-option>
                                 </mat-select>
                             </mat-form-field>
